[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scenes/CharacterSelection.gd" type="Script" id=1]
[ext_resource path="res://Scenes/create_hero_CharacterSelection.tres" type="ButtonGroup" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 420.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_right = 74.0
margin_bottom = 14.0
text = "Select Hero"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 420.0
margin_bottom = 90.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 420.0
margin_bottom = 72.0

[node name="Container" type="Container" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 420.0
rect_min_size = Vector2( 420, 0 )

[node name="button_rename" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 4.0
margin_right = 420.0
margin_bottom = 24.0
text = "Rename Character"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 420.0
margin_bottom = 48.0

[node name="button_char1" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 47.0
margin_bottom = 20.0
group = ExtResource( 2 )
text = "char1"

[node name="button_char2" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 51.0
margin_right = 98.0
margin_bottom = 20.0
group = ExtResource( 2 )
text = "char2"

[node name="button_char3" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 102.0
margin_right = 149.0
margin_bottom = 20.0
group = ExtResource( 2 )
text = "char3"

[node name="button_char4" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 153.0
margin_right = 200.0
margin_bottom = 20.0
group = ExtResource( 2 )
text = "char4"

[node name="button_createChar" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 420.0
margin_bottom = 72.0
text = "Create Character"
